--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,18 +17,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EHataw"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name="com.danielx31.ehataw.HomeActivity"
+            android:name=".ZumbaActivity"
             android:exported="false" />
         <activity
-            android:name="com.danielx31.ehataw.ForgotPasswordActivity"
+            android:name=".SplashActivity"
             android:exported="false" />
         <activity
-            android:name="com.danielx31.ehataw.RegisterActivity"
+            android:name=".HomeActivity"
             android:exported="false" />
         <activity
-            android:name="com.danielx31.ehataw.LoginActivity"
+            android:name=".ForgotPasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,7 +44,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.danielx31.ehataw.MainActivity"
+            android:name=".MainActivity"
             android:exported="true" />
 
         <meta-data
