--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.firebase:firebase-auth:21.0.4'
     implementation 'com.google.firebase:firebase-firestore:24.1.2'
+    implementation 'com.firebaseui:firebase-ui-firestore:8.0.1'
+    implementation 'androidx.paging:paging-runtime:3.1.1'
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     implementation 'androidx.preference:preference:1.1.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
