--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     implementation 'androidx.preference:preference:1.1.1'
     implementation 'androidx.paging:paging-common:3.0.0'
+    implementation 'com.google.firebase:firebase-storage:20.0.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
     implementation 'com.google.android.exoplayer:exoplayer:2.18.1'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.18.1'
