--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,9 +46,11 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-firestore:8.0.1'
     implementation 'androidx.paging:paging-runtime:3.1.1'
     implementation 'com.github.bumptech.glide:glide:4.13.2'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
     implementation 'androidx.preference:preference:1.1.1'
     implementation 'androidx.paging:paging-common:3.0.0'
     implementation 'com.google.firebase:firebase-storage:20.0.2'
+    implementation 'net.sourceforge.streamsupport:streamsupport:1.7.4'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
     implementation 'com.google.android.exoplayer:exoplayer:2.18.1'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.18.1'
