--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,37 +21,40 @@
         android:theme="@style/Theme.EHataw"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
+        <activity
+            android:name=".Sample"
+            android:exported="false" />
         <activity
             android:name=".DetailFood"
+            android:exported="false"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustNothing"
-            android:exported="false" />
+            android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".ZumbaActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustNothing"
-            android:exported="false" />
+            android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".HomeActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustNothing"
-            android:exported="false" />
+            android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".ForgotPasswordActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustNothing"
-            android:exported="false" />
+            android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".RegisterActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustNothing"
-            android:exported="false" />
-        <activity android:name=".SplashActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustNothing"
+            android:windowSoftInputMode="adjustNothing" />
+        <activity
+            android:name=".SplashActivity"
+            android:exported="true"
             android:launchMode="singleInstance"
-            android:exported="true">
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustNothing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -60,14 +63,14 @@
         </activity>
         <activity
             android:name=".LoginActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustNothing"
-            android:exported="false" />
+            android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".MainActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustNothing"
-            android:exported="false" />
+            android:windowSoftInputMode="adjustNothing" />
 
         <meta-data
             android:name="preloaded_fonts"
