--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,13 +22,16 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".WelcomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".HealthRelated"
             android:exported="false" />
         <activity
             android:name=".WeightGoal"
             android:exported="false" />
         <activity
-            android:name=".WelcomeActivity"
+            android:name=".BMIUser"
             android:exported="false" />
         <activity
             android:name=".BenefitActivity"
