--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:screenOrientation="portrait"
             android:exported="false" />
         <activity
-            android:name=".HealthRelatedActivity"
+            android:name=".HealthConditionActivity"
             android:screenOrientation="portrait"
             android:exported="false" />
         <activity
